# Clouisle

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.md  TOOL_CALL_FIX.md  license-policy.yml  main.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  team_access.py  workflow_access.py
backend/app/api/v1/: api.py  workflow_metrics.py  workflow_versions.py
backend/app/core/: audit.py  captcha.py  celery.py  config.py  dingtalk.py  email.py  email_templates.py  feishu.py  i18n.py  i18n_legacy.py  init_data.py  login_anomaly.py  password.py  permissions.py  redis.py  security.py  slack.py  totp_security.py  webhook.py  wechat.py
backend/app/llm/: __init__.py  errors.py  manager.py  token_counter.py
backend/app/llm/adapters/: __init__.py  dashscope_video_client.py  kling_client.py  luma_client.py  media_utils.py  pika_client.py  runway_client.py  siliconflow_client.py  volcengine_client.py
backend/app/llm/tools/: __init__.py  bash.py  executors.py  mcp_client.py  memory_tools.py  registry.py  sandbox.py  sandbox_files.py
backend/app/llm/types/: __init__.py  chat.py  image.py  rerank.py  video.py
backend/app/models/: __init__.py  agent.py  api_key.py  audit_log.py  knowledge_base.py  memory.py  model.py  notification.py  package_import.py  password_history.py  site_setting.py  skill.py  sso_provider.py  sso_session.py  tool.py  tool_config.py  user.py  user_sso_connection.py  workflow.py
backend/app/schemas/: agent.py  api_key.py  audit_log.py  captcha.py  clouisle_package.py  knowledge_base.py  memory.py  model.py  notification.py  response.py  site_setting.py  skill.py  sso.py  token.py  tool.py  tool_config.py  user.py  verification.py  workflow.py
backend/app/scripts/: migrate_embeddings.py  migrate_message_fields.py
backend/app/services/: __init__.py  admin_observability.py  agent.py  audit_log.py  auto_notification.py  chat_context.py  clouisle_package.py  clouisle_package_resources.py  context_compression_state.py  document_processor.py  error_messages.py  file_parse_cache.py  file_parser.py  media_asset_service.py  memory.py  message_branching.py  notification.py  password_expiration.py  session_memory.py  skill.py  skill_executor.py  skill_import.py  skill_package.py  sso.py  team_role_sync.py  tool.py  totp.py  upload_storage.py  vector_store.py
backend/app/services/sandbox/: __init__.py  artifacts.py  cache.py  cleanup.py  command_safety.py  compiler.py  gateway.py  manager.py  metrics.py  models.py  node_env.py  policies.py  process_launcher.py  python_env.py  result_store.py  scheduler.py  session_store.py  skills.py  worker.py  workspace.py
backend/app/services/workflow/: __init__.py  benchmark.py  cache.py  context.py  debugger.py  errors.py  executor.py  lazy_stream.py  metrics.py  orchestrator.py  plan.py  profiler.py  retry.py  schema_inference.py  serialization.py  stream.py  tasks.py  templates.py  types.py  versioning.py
backend/app/sso/: __init__.py
backend/app/sso/providers/: __init__.py  base.py  cas.py  oidc.py  saml.py
backend/app/tasks/: __init__.py  api_key.py  audit_log.py  knowledge_base.py  notification.py  password_expiration.py  sandbox.py  session_memory.py  workflow.py
backend/app/templates/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
backend/scripts/: check_i18n_catalogs.py  check_i18n_legacy_sync.py  check_licenses.py  export_i18n_catalogs.py  i18n_catalog_utils.py  sync_i18n_legacy.py
backend/tests/: test_main_sandbox_worker.py
backend/tests/api/: test_admin_observability.py  test_admin_packages.py  test_click_captcha.py  test_embed_domain.py  test_knowledge_base_permissions.py  test_packages.py  test_profile_email_verification.py  test_registration_locale.py  test_scoped_rbac_access.py  test_site_settings_theme.py  test_sso_redirects.py  test_team_ownership_transfer.py
backend/tests/llm/: test_admin_model_test_config.py  test_bash_sandbox_tool.py  test_bash_tool.py  test_chat_media_tool_summaries.py  test_chat_provider_params.py  test_code_sandbox.py  test_http_tool_executors.py  test_media_adapters.py  test_media_builtin_tools.py  test_rerank.py  test_sandbox_file_tools.py
backend/tests/services/: test_admin_observability_service.py  test_builtin_tool_localization.py  test_chat_agent_tools.py  test_chat_context_compression.py  test_chat_context_file_uploads.py  test_chat_context_sandbox_prompt.py  test_chat_stream_utils.py  test_chat_tool_executor.py  test_chat_tools_file_cache.py  test_chunk_text_escapes.py  test_clouisle_package.py  test_document_processor_media_assets.py  test_document_processor_storage.py  test_i18n_catalog_reload.py  test_notification_service.py  test_sandbox_artifacts.py  test_sandbox_env_cache.py  test_sandbox_gateway.py  test_sandbox_manager.py  test_sandbox_runtime_integration.py  test_sandbox_snippet_runtime.py  test_sandbox_task.py  test_session_memory.py  test_skill_executor.py  test_skill_import_storage.py  test_skill_package.py  test_sso_service.py  test_team_role_sync.py  test_tool_service.py  test_tools_execute_code_api.py  test_tools_test_api.py  test_upload_endpoints.py  test_upload_storage.py  test_vector_store.py
backend/tests/services/workflow/: test_context.py  test_executor.py  test_executors.py  test_native_passthrough.py  test_orchestrator.py  test_output_schema.py  test_plan.py  (+7 more)
(+969 files in other folders)
