[project]
name = "clouisle-backend"
version = "0.1.0"
description = "Backend for Clouisle application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "tortoise-orm[asyncpg]>=0.20.0",
    "asyncpg>=0.29.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.22",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.0",
    "email-validator>=2.3.0",
    "bcrypt==5.0.0",
    "aiosmtplib>=3.0.0",
    "aiofiles>=25.1.0",
    "types-aiofiles>=25.1.0.20251011",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.0",
    "langchain-core>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=2.1.4",
    "google-genai>=1.0.0",
    "langgraph>=1.0.5",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # Document processing
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.0.1a3",
    "jieba>=0.42.1",
    # Token counting
    "tiktoken>=0.7.0",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "qdrant-client>=1.16.2",
    # SSO (Single Sign-On)
    "authlib>=1.7.0",
    "python3-saml>=1.16.0",
    "python-cas>=1.6.0",
    "cryptography>=46.0.5",
    # Markdown processing
    "markdown>=3.5.0",
    "gunicorn>=22.0.0",
    "anthropic>=0.75.0",
    # TOTP (Two-Factor Authentication)
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "pillow>=12.1.1",
    "aiohttp>=3.13.5",
    "urllib3>=2.6.3",
    "Babel>=2.17.0",
    "msgpack>=1.1.0",
]

[tool.uv]
constraint-dependencies = [
    "lxml>=6.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.7.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pip-licenses>=5.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
ignore_missing_imports = true
