[project]
name = "clouisle-backend"
version = "0.1.0"
description = "Backend for Clouisle application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "tortoise-orm[asyncpg]>=1.1.7",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.31",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
    "bcrypt==5.0.0",
    "aiosmtplib>=5.1.0",
    "aiofiles>=25.1.0",
    "types-aiofiles>=25.1.0.20260409",
    "types-PyYAML>=6.0.12.20250915",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "google-genai>=1.72.0",
    "langgraph>=1.1.6",
    # MCP (Model Context Protocol)
    "mcp>=1.27.0",
    # Document processing
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.5",
    "jieba>=0.42.1",
    # Token counting
    "tiktoken>=0.12.0",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.8.0",
    "qdrant-client>=1.17.1",
    # SSO (Single Sign-On)
    "authlib>=1.7.0",
    "python3-saml>=1.16.0",
    "python-cas>=1.7.1",
    "cryptography>=48.0.1",
    # Markdown processing
    "markdown>=3.10.2",
    "pyyaml>=6.0.0",
    "gunicorn>=25.3.0",
    "anthropic>=0.94.0",
    # TOTP (Two-Factor Authentication)
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "pillow>=12.2.0",
    "aiohttp>=3.14.0",
    "urllib3>=2.6.3",
    "Babel>=2.17.0",
    "msgpack>=1.2.1",
    "psutil>=7.1.3",
]

[tool.uv]
constraint-dependencies = [
    "lxml>=6.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.7.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pip-licenses>=5.5.5",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
ignore_missing_imports = true
